<resources>
    <string name="app_name">TaskApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="qwerty">qwerty</string>
    <string name="qwerty_2">qwerty</string>
    <string name="qwerty_3">qwerty</string>
    <string name="qwerty_4">qwerty</string>
</resources>