<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp">



    <TextView
        android:background="@color/yellow"
        android:textStyle="bold"
        android:id="@+id/txt_title"
        android:padding="6dp"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:text="@string/qwerty"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:background="@color/yellow"
        android:id="@+id/txt_description"
        android:padding="6dp"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:text="@string/qwerty_2"
        app:layout_constraintTop_toBottomOf="@id/txt_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/txt_title_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/green"
        android:padding="6dp"
        android:text="@string/qwerty_4"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/txt_description"
        tools:ignore="MissingConstraints" />

    <TextView
        android:background="@color/green"
        android:id="@+id/txt_description_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:text="@string/qwerty_3"
        android:textColor="@color/black"
        android:textSize="28sp"
        app:layout_constraintTop_toBottomOf="@id/txt_title_2"
        tools:layout_editor_absoluteX="-26dp" />


</androidx.constraintlayout.widget.ConstraintLayout>