<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".EditFragment"
    android:background="#F6E447">


    <TextView
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="14dp"
        app:layout_constraintTop_toTopOf="parent"
        android:textStyle="bold"
        android:textSize="30sp"
        android:hint="@string/title"
        android:id="@+id/txt_edit_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_margin="14dp"
        android:textStyle="italic"
        android:textSize="24sp"
        android:hint="@string/description"
        app:layout_constraintTop_toBottomOf="@id/txt_edit_1"
        android:id="@+id/txt_edit_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:backgroundTint="#627763"
        android:text="@string/save"
        app:cornerRadius="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>